1. 解决CarrierThreadLocal导致的死锁问题
2. 解决没有添加--add-exports
     java.base/jdk.internal.vm=ALL-UNNAMED 导致初始化吃异常